--- a/package.json
+++ b/package.json
@@ -18,27 +18,26 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.3-alpha.2",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "concurrently": "^7.2.1",
-    "cross-env": "^7.0.3",
-    "wait-on": "^6.0.1",
-    "electron": "^19.0.0",
-    "electron-is-dev": "^2.0.0",
-
     "@mui/types": "^7.1.0",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.0.0",
-
+    "concurrently": "^7.2.1",
+    "cross-env": "^7.0.3",
+    "electron": "^19.0.0",
+    "electron-is-dev": "^2.0.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0"
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "wait-on": "^6.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
