--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project-launcher",
   "version": "0.1.0",
   "private": true,
-  "main": "public/electron.js",
+  "main": "src/electron/electron.js",
   "homepage": "./",
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -23,7 +23,9 @@
     "react-scripts": "5.0.1",
     "recoil": "^0.7.3-alpha.2",
     "typescript": "^4.6.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "electron": "^19.0.0",
+    "electron-is-dev": "^2.0.0"
   },
   "devDependencies": {
     "@mui/types": "^7.1.0",
@@ -31,8 +33,6 @@
     "@typescript-eslint/parser": "^5.0.0",
     "concurrently": "^7.2.1",
     "cross-env": "^7.0.3",
-    "electron": "^19.0.0",
-    "electron-is-dev": "^2.0.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
