--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-scripts": "5.0.1",
     "recoil": "^0.7.3-alpha.2",
     "typescript": "^4.6.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "electron": "^19.0.1"
   },
   "devDependencies": {
     "@mui/types": "^7.1.0",
@@ -45,7 +46,6 @@
     "@typescript-eslint/parser": "^5.0.0",
     "concurrently": "^7.2.1",
     "cross-env": "^7.0.3",
-    "electron": "^19.0.1",
     "electron-builder": "^23.0.3",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
