--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/electron-devtools-installer": "^2.2.2",
     "@types/jest": "^27.5.1",
+    "electron": "^19.0.1",
     "electron-devtools-installer": "^3.2.0",
     "electron-is-dev": "^2.0.0",
     "electron-reload": "^2.0.0-alpha.1",
@@ -34,8 +35,7 @@
     "react-scripts": "5.0.1",
     "recoil": "^0.7.3-alpha.2",
     "typescript": "^4.6.4",
-    "web-vitals": "^2.1.4",
-    "electron": "^19.0.1"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@mui/types": "^7.1.0",
@@ -54,12 +54,13 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "react-app-rewired": "^2.2.1",
     "wait-on": "^6.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "lint": "eslint . --ext .tsx",
     "lint-fix": "eslint . --ext .tsx --fix",
