--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "project-launcher",
+  "author": "mjamry",
+  "description": "project launcher and dashboard",
   "version": "0.1.0",
   "private": true,
   "main": "build/electron/electron.js",
@@ -9,9 +11,9 @@
     "files": [
       "build/**/*"
     ],
-    "directories": {
-      "buildResources": "assets"
-    }
+    "extraFiles": [
+      "config"
+    ]
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -23,7 +25,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/electron-devtools-installer": "^2.2.2",
     "@types/jest": "^27.5.1",
-    "electron": "^19.0.1",
     "electron-devtools-installer": "^3.2.0",
     "electron-is-dev": "^2.0.0",
     "electron-reload": "^2.0.0-alpha.1",
@@ -55,7 +56,8 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "react-app-rewired": "^2.2.1",
-    "wait-on": "^6.0.1"
+    "wait-on": "^6.0.1",
+    "electron": "^19.0.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
