Extended app settings

--- a/config/appSettings.json
+++ b/config/appSettings.json
@@ -1,5 +1,7 @@
 {
   "isDevelopment": true,
-  "jiraUrl": "",
-  "jiraToken": ""
+  "jiraUrl": "https://support.future-processing.com",
+  "jiraToken": "Njk5NDk2MDI5NzY0OqwnFB7Jqeg5hH5bV8Sb/z1MGHxb",
+  "jiraRefreshTimeoutInMinutes": 15000,
+  "jiraChangelogFields": ["assignee", "status", "priority", "type"]
 }
