--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "recoil": "^0.7.3-alpha.2",
+    "recoil": "^0.7.6",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@mui/types": "^7.1.0",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
