#6 Added app theming functionality

--- a/config/appSettings.json
+++ b/config/appSettings.json
@@ -4,5 +4,12 @@
   "jiraToken": "Njk5NDk2MDI5NzY0OqwnFB7Jqeg5hH5bV8Sb/z1MGHxb",
   "jiraRefreshTimeoutInMinutes": 5,
   "jiraHistoryTimeInMinutes": 50000,
-  "jiraChangelogFields": ["assignee", "status", "priority", "type"]
+  "jiraChangelogFields": ["assignee", "status", "priority", "type"],
+  "theme": {
+    "primaryBackgroundColor": "#2f3e46",
+    "primaryColor": "#cad2c5",
+    "secondaryBackgroundColor": "#84a98c",
+    "secondaryColor": "#2f3e46",
+    "background": "#52796f"
+  }
 }
