--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.1",
     "@mui/utils": "^5.10.9",
@@ -53,7 +52,7 @@
     "concurrently": "^7.2.1",
     "cross-env": "^7.0.3",
     "electron": "^19.0.1",
-    "electron-builder": "^23.0.3",
+    "electron-builder": "^23.6.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -68,12 +67,13 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject",
     "lint": "eslint . --ext .tsx",
     "lint-fix": "eslint . --ext .tsx --fix",
     "postinstall": "electron-builder install-app-deps",
     "electron:dev": "concurrently \"cross-env BROWSER=none npm run start\" \"wait-on http://localhost:3000 && tsc -p electron -w\" \"wait-on http://localhost:3000 && tsc -p electron && electron .\"",
-    "electron:build": "npm run build && tsc -p electron && electron-builder"
+    "electron:build": "npm run build && tsc -p electron && electron-builder",
+		"build:win": "electron-builder --windows",
+		"release:win": "electron-builder --windows --publish always"
   },
   "eslintConfig": {
     "extends": [
