#14 Rewritten build release workflows to better match requirements

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,9 @@
-name: Release
+name: Build
 
 on:
     push:
       branches:
-        - master
+        - develop
     workflow_dispatch:
 
 jobs:
@@ -28,5 +28,5 @@ jobs:
     - name: build
         run: npm run build
 
-    - name: release electron win
-        run: npm run release:win
+    - name: build electron win
+        run: npm run build:win
