--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "electron-is-dev": "^2.0.0",
     "electron-reload": "^2.0.0-alpha.1",
     "esm": "^3.2.25",
+    "notistack": "^3.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router": "^6.3.0",
@@ -73,8 +74,8 @@
     "lint-fix": "eslint . --ext .tsx --fix",
     "electron:dev": "concurrently \"cross-env BROWSER=none npm run start\" \"wait-on http://localhost:3000 && tsc -p electron -w\" \"wait-on http://localhost:3000 && tsc -p electron && electron .\"",
     "postinstall": "electron-builder install-app-deps",
-		"build:win": "electron-builder --windows --publish=never",
-		"release:win": "electron-builder --windows --publish always"
+    "build:win": "electron-builder --windows --publish=never",
+    "release:win": "electron-builder --windows --publish always"
   },
   "eslintConfig": {
     "extends": [
