#58 Changed source of app details to package.json instead of separate file

--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -9,6 +9,8 @@
     "noEmitOnError": true,
     "typeRoots": [
       "node_modules/@types"
-    ]
+    ],
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
   }
 }
