--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "project-launcher",
+  "appName":"Project Launcher",
+  "copyright": "Copyright (c) 2023 michal.jamry@gmail.com",
   "author": "michal.jamry@gmail.com",
   "description": "project launcher and dashboard",
   "version": "1.0.1",
